# colmap-odometry

./: AUTHORS  LICENSE  README.md  main.py  pyproject.toml
assets/output/: database.db  images.txt  trajectory.txt
calibration/: calibration_euroc.yaml  camera_rig_euroc.yaml
config/: config_carla.yaml  config_euroc.yaml
src/: memory.py
src/odometry/: custom_bundle_adjustment.py  custom_incremental_pipeline.py  db_colmap.py  local_features.py  odometry.py  odometry_min_solver.py
