[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colmap-odometry"
description = "Colmap-Odometry is a Visual-Odometry framework based on pycolmap."
version = "1.0.0"
readme = "README.md"
authors = [
  { name = "Luca Morelli", email = "lcmorelli.eng@gmail.com" },
]
requires-python = ">=3.9"
keywords = [
  "odometry",
  "visual-slam",
  "image-matching",
  "deep-learning",
  "local-features",
  "sfm",
]

dependencies = [
  "numpy",
  "pyyaml",
  "tqdm",
  "pyquaternion",
  "transformers",
  "torch",
  "torchvision",
  "opencv-python",
  "kornia>=0.7.2",
  "pycolmap==3.11.1",
  "pyceres==2.4",
  "enlighten>=1.14.1",
  "psutil",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.urls]
Homepage = "https://github.com/3DOM-FBK/colmap-odometry"
Documentation = "https://github.com/3DOM-FBK/colmap-odometry"
Download = "https://github.com/3DOM-FBK/colmap-odometry"
"Source Code" = "https://github.com/3DOM-FBK/colmap-odometry"

[tool.hatch.build.targets.wheel]
packages = ["src/colmap_vo"]

[tool.hatch.version]
path = "src/colmap_vo/__init__.py"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/deep_image_matching/__init__.py" = ["{version}"]